@@ -21,6 +21,8 @@ Release 0.20.1 - Unreleased
                exist throws a RuntimeException 
    HBASE-1853  Each time around the regionserver core loop, we clear the
                messages to pass master, even if we failed to deliver them
+   HBASE-1815  HBaseClient can get stuck in an infinite loop while attempting
+               to contact a failed regionserver
 
   IMPROVEMENTS
    HBASE-1819  Update to 0.20.1 hadoop and zk 3.2.1
